--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <header>
-      <img src="./assets/images/avatar-jessica.jpeg">
-      <h2>Jessica Randall</h2>
-      <h4>London, United Kingdom</h4>
+      <img alt="avatar" src="./assets/images/avatar-jessica.jpeg">
+      <h1>Jessica Randall</h1>
+      <h2>London, United Kingdom</h2>
       <p>"Front-end developer and avid reader."</p>
     </header>
     <main>
